# c-

./: .gitignore  CMakeLists.txt  c++大作业方案.docx
c--main/: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
c--main/src/: main.cpp
c--main/src/core/: Config.h  Game.cpp  Game.h  GameStats.h
c--main/src/entities/: Boss.cpp  Boss.h  BossBullet.cpp  BossBullet.h  BossManager.cpp  BossManager.h  Item.cpp  Item.h  Player.cpp  Player.h  PlayerBullet.cpp  PlayerBullet.h  PlayerBulletCluster.cpp  PlayerBulletCluster.h  PlayerBulletHoming.cpp  PlayerBulletHoming.h  PlayerBulletOrbital.cpp  PlayerBulletOrbital.h  PlayerBulletPiercing.cpp  PlayerBulletPiercing.h  PlayerBulletSpread.cpp  PlayerBulletSpread.h
c--main/src/systems/: AudioSystem.cpp  AudioSystem.h  BackgroundSystem.cpp  BackgroundSystem.h  CameraShake.cpp  CameraShake.h  CollisionSystem.cpp  CollisionSystem.h  ParticleSystem.cpp  ParticleSystem.h
c--main/src/ui/: Button.cpp  Button.h  HUD.cpp  HUD.h  Menu.cpp  Menu.h
docs/superpowers/plans/: 2026-05-30-hard-mode-implementation.md
docs/superpowers/specs/: 2026-05-30-hard-mode-design.md
src/core/: Config.h  Game.cpp  Game.h  GameStats.h
src/entities/: Boss.cpp  Boss.h  BossBullet.cpp  BossBullet.h  BossManager.cpp  BossManager.h  Item.cpp  Item.h  Player.cpp  Player.h  PlayerBullet.cpp  PlayerBullet.h  PlayerBulletCluster.cpp  PlayerBulletCluster.h  PlayerBulletHoming.cpp  PlayerBulletHoming.h  PlayerBulletOrbital.cpp  PlayerBulletOrbital.h  PlayerBulletPiercing.cpp  PlayerBulletSpread.cpp
src/systems/: AudioSystem.cpp  AudioSystem.h  BackgroundSystem.cpp  BackgroundSystem.h  CameraShake.cpp  CameraShake.h  CollisionSystem.h  ParticleSystem.cpp  ParticleSystem.h
src/ui/: Button.cpp  Button.h  HUD.cpp  HUD.h  Menu.cpp  Menu.h
